<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:titleCondensed="@string/menu_home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/home_selector"
        />
    <item android:id="@+id/action_stats"
        android:title="@string/menu_stats"
        android:titleCondensed="@string/menu_stats"
        app:showAsAction="ifRoom"
        android:icon="@drawable/stats_selector" />
    <item android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        android:titleCondensed="@string/menu_settings"
        android:icon="@drawable/settings_selector"
        app:showAsAction="ifRoom"/>
</menu>