<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/charger_background"
        android:elevation="1dp"
        android:fadeScrollbars="true"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:requiresFadingEdge="vertical"
        android:scrollbarFadeDuration="@android:integer/config_shortAnimTime"
        android:scrollbarSize="0.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="2dp"
            android:elevation="2dp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reward Points"
                android:textColor="@color/colorAccent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="treasure.json"
                    app:lottie_loop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="18sp"
                    android:id="@+id/reward_value"
                    android:text="points! Earn rewards to unlock more feautures"
                    android:layout_toEndOf="@+id/animationView"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#d3d3d3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Permanent Notification"
                android:textColor="@color/colorAccent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/permanent_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/permanaent_notification"
                android:textAlignment="textStart" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/current_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/Battery_speed"
                android:textAlignment="textStart" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#d3d3d3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_alerts"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/oreo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="16"
                android:padding="10dp"
                android:text="@string/enable_permanent_notification_to_enable_below_alerts"
                android:visibility="gone" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/battery_full_charge_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/Battery_full_charge_notification" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#d3d3d3" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/battery_low_charge_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/Battery_low_charge_alarm"
                android:textAlignment="textStart" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#d3d3d3" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/battery_high_voltage_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/Battery_high_voltage_notification"
                android:textAlignment="textStart" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#d3d3d3" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/battery_high_temperature_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="false"
                android:padding="10dp"
                android:text="@string/Battery_high_temperature_notification"
                android:textAlignment="textStart" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="30dp"
                android:background="#fff"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>