<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".stats">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1.25dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="1.25dp"
                android:background="@drawable/booster_background"
                android:elevation="1.25dp"
                android:padding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/stats_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:text="@string/stats_text"
                    android:textAlignment="textStart"
                    android:textColor="#000"
                    app:drawableLeftCompat="@drawable/ic_baseline_stats"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/battery_stats"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="Battery usage statisics"
                    android:textAllCaps="false"
                    app:cornerRadius="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/stats_text"
                    tools:layout_editor_absoluteX="20dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stats"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1.25dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="1.25dp"
                android:background="@drawable/booster_background"
                android:elevation="1.25dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/speed_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:fontFamily="r"
                    android:text="@string/speed_text"
                    android:textAlignment="textStart"
                    android:textColor="#000"
                    app:drawableLeftCompat="@drawable/ic_baseline_speed_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/speed_test"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/playfair_display"
                    android:gravity="center"
                    android:text="Charge speed test"
                    android:textAllCaps="false"
                    app:cornerRadius="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/speed_text"
                    tools:layout_editor_absoluteX="20dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/speed"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1.25dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/booster_background"
                android:elevation="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"

                >


                <TextView
                    android:id="@+id/history_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawablePadding="10dp"
                    android:elevation="6dp"
                    android:ems="10"
                    android:text="@string/history_data"
                    android:textAlignment="textStart"
                    android:textColor="#000"
                    app:drawableLeftCompat="@drawable/ic_baseline_history_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/history_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/history_text"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="No history available"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/history_text"
                    android:elevation="10dp"
                    tools:listitem="@layout/recyclerviewitem" />

            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>